GME Gain: $ 219.8 Win %: 53.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4
GME Gain: $ -922.71 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP_DB6
GME Gain: $ -83.59 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR_DB6
GME Gain: $ -27.82 Win %: 48.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV_DB6
GME Gain: $ -17.44 Win %: 48.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL_DB6
GME Gain: $ -1014.62 Win %: 36.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP_DB6
GME Gain: $ -98.5 Win %: 51.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR_DB6
GME Gain: $ -69.26 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV_DB6
GME Gain: $ -1039.71 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP_DB6
GME Gain: $ -82.54 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL_DB6
GME Gain: $ -1007.99 Win %: 38.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP_DB6
GME Gain: $ -285.49 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_IR1
GME Gain: $ -51.77 Win %: 73.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_TS
GME Gain: $ -804.5 Win %: 38.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR_QP
GME Gain: $ -1243.36 Win %: 32.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP_IR1
GME Gain: $ -122.37 Win %: 48.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_TR
GME Gain: $ -23.33 Win %: 44.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AV
GME Gain: $ 27.56 Win %: 59.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_AL
GME Gain: $ -878.43 Win %: 34.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV_QP
GME Gain: $ -175.54 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_TR
GME Gain: $ -25.95 Win %: 48.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AV
GME Gain: $ -110.8 Win %: 53.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_AL
GME Gain: $ -906.85 Win %: 33.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM_QP
GME Gain: $ -38.97 Win %: 44.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QL
GME Gain: $ -907.77 Win %: 36.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_QP
GME Gain: $ 15.36 Win %: 71.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT_TS
GME Gain: $ -15092.3 Win %: 21.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO_AC
GME Gain: $ -211.66 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP_PM
GME Gain: $ 40.23 Win %: 78.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AV_TS
GME Gain: $ 40.46 Win %: 77.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AL_TS
GME Gain: $ 159.81 Win %: 55.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_RV
GME Gain: $ 24.32 Win %: 48.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IR1
GME Gain: $ -124.0 Win %: 49.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TR
GME Gain: $ -25.89 Win %: 44.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AV
GME Gain: $ 24.22 Win %: 56.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AL
GME Gain: $ -117.13 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_VI
GME Gain: $ -120.22 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_LI
GME Gain: $ -772.72 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QP
GME Gain: $ 102.36 Win %: 53.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_HM
GME Gain: $ 170.44 Win %: 63.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_SS
GME Gain: $ -36.13 Win %: 36.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_QL
GME Gain: $ 105.52 Win %: 54.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_DB6
GME Gain: $ 129.77 Win %: 51.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AO
GME Gain: $ -2183.95 Win %: 33.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_AC
GME Gain: $ -1.21 Win %: 59.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_IT
GME Gain: $ -117.2 Win %: 40.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_PM
GME Gain: $ 47.24 Win %: 72.00 in 83 days with algo TB5_HL_QM_OB2_OS2_CB4_CS4_TS
GME Gain: $ -644.56 Win %: 48.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_TR_QP_DB10
GME Gain: $ -95.64 Win %: 53.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_TR_DB10
GME Gain: $ -222.45 Win %: 48.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AV_DB10
GME Gain: $ -141.15 Win %: 51.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AL_DB10
GME Gain: $ -877.33 Win %: 39.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_QP_DB10
GME Gain: $ -84.74 Win %: 57.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM_TR_DB10
GME Gain: $ -207.21 Win %: 53.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AV_DB10
GME Gain: $ -882.84 Win %: 38.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM_QP_DB10
GME Gain: $ -138.95 Win %: 51.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QL_DB10
GME Gain: $ -854.55 Win %: 42.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QP_DB10
GME Gain: $ 4.34 Win %: 54.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_TR_IR3
GME Gain: $ 70.35 Win %: 81.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_TR_TS
GME Gain: $ -404.4 Win %: 48.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_TR_QP
GME Gain: $ -1425.37 Win %: 42.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_QP_IR3
GME Gain: $ 135.03 Win %: 56.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_TR
GME Gain: $ -571.16 Win %: 45.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AV
GME Gain: $ 80.33 Win %: 61.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_AL
GME Gain: $ -822.51 Win %: 40.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV_QP
GME Gain: $ 139.21 Win %: 62.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM_TR
GME Gain: $ -430.06 Win %: 61.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AV
GME Gain: $ 86.43 Win %: 65.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM_AL
GME Gain: $ -842.69 Win %: 42.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM_QP
GME Gain: $ -25.11 Win %: 48.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QL
GME Gain: $ -836.84 Win %: 42.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_IT_QP
GME Gain: $ 9.16 Win %: 78.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_IT_TS
GME Gain: $ -647.63 Win %: 46.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_AO_AC
GME Gain: $ -243.01 Win %: 45.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_QP_PM
GME Gain: $ 75.11 Win %: 80.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_AV_TS
GME Gain: $ 34.21 Win %: 84.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_AL_TS
GME Gain: $ 172.85 Win %: 57.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_RV
GME Gain: $ 6.58 Win %: 56.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_IR3
GME Gain: $ 99.29 Win %: 55.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_TR
GME Gain: $ -571.15 Win %: 45.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_AV
GME Gain: $ 72.59 Win %: 61.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_AL
GME Gain: $ -409.92 Win %: 46.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_VI
GME Gain: $ -49.23 Win %: 51.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_LI
GME Gain: $ -781.13 Win %: 42.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_QP
GME Gain: $ 146.96 Win %: 65.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_HM
GME Gain: $ 83.75 Win %: 56.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_SS
GME Gain: $ 67.72 Win %: 46.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_QL
GME Gain: $ -12.66 Win %: 57.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_DB10
GME Gain: $ 89.0 Win %: 57.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_AO
GME Gain: $ -98.11 Win %: 55.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_AC
GME Gain: $ -48.89 Win %: 61.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_IT
GME Gain: $ -95.17 Win %: 59.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_PM
GME Gain: $ 13.96 Win %: 80.00 in 83 days with algo TB3_HL_HI_QM_OB2_OS2_CB4_CS4_TS
GME Gain: $ -699.86 Win %: 42.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
GME Gain: $ 41.57 Win %: 51.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
GME Gain: $ -239.23 Win %: 43.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
GME Gain: $ -20.86 Win %: 49.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
GME Gain: $ -998.98 Win %: 38.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
GME Gain: $ 3.86 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
GME Gain: $ -245.51 Win %: 44.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
GME Gain: $ -905.42 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
GME Gain: $ -98.45 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
GME Gain: $ -885.98 Win %: 40.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
GME Gain: $ 40.32 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_IR1
GME Gain: $ 30.6 Win %: 77.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_TS
GME Gain: $ -526.24 Win %: 42.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR_QP
GME Gain: $ -788.4 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_IR1
GME Gain: $ 72.71 Win %: 53.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_TR
GME Gain: $ -226.7 Win %: 38.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AV
GME Gain: $ 39.59 Win %: 48.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_AL
GME Gain: $ -823.95 Win %: 38.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV_QP
GME Gain: $ 66.13 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_TR
GME Gain: $ -185.3 Win %: 40.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AV
GME Gain: $ 36.18 Win %: 54.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_AL
GME Gain: $ -748.88 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM_QP
GME Gain: $ -169.44 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QL
GME Gain: $ -831.88 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_QP
GME Gain: $ 13.48 Win %: 73.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT_TS
GME Gain: $ -29113.4 Win %: 18.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO_AC
GME Gain: $ -159.64 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP_PM
GME Gain: $ -281.23 Win %: 71.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AV_TS
GME Gain: $ -20.09 Win %: 75.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AL_TS
GME Gain: $ 176.0 Win %: 51.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_RV
GME Gain: $ 198.48 Win %: 53.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IR1
GME Gain: $ 107.49 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TR
GME Gain: $ -200.2 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AV
GME Gain: $ 59.01 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AL
GME Gain: $ -91.06 Win %: 34.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_VI
GME Gain: $ 74.56 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_LI
GME Gain: $ -738.58 Win %: 40.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QP
GME Gain: $ 211.35 Win %: 56.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_HM
GME Gain: $ 168.19 Win %: 56.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_SS
GME Gain: $ 129.17 Win %: 36.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_QL
GME Gain: $ 226.03 Win %: 55.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_DB6
GME Gain: $ 113.33 Win %: 54.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AO
GME Gain: $ -1302.81 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_AC
GME Gain: $ 40.53 Win %: 61.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_IT
GME Gain: $ -107.38 Win %: 40.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_PM
GME Gain: $ 59.89 Win %: 75.00 in 83 days with algo TB5_HL_QM_OB3_OS3_CB5_CS5_TS
GME Gain: $ -1126.84 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB6
GME Gain: $ -154.54 Win %: 46.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB6
GME Gain: $ -310.5 Win %: 42.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB6
GME Gain: $ -273.5 Win %: 45.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB6
GME Gain: $ -1296.75 Win %: 34.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB6
GME Gain: $ -160.31 Win %: 49.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB6
GME Gain: $ -412.63 Win %: 45.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB6
GME Gain: $ -1296.37 Win %: 32.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB6
GME Gain: $ -123.79 Win %: 44.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB6
GME Gain: $ -1234.37 Win %: 34.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB6
GME Gain: $ -2.28 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_IR1
GME Gain: $ -5.59 Win %: 77.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_TS
GME Gain: $ -699.45 Win %: 42.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR_QP
GME Gain: $ -761.8 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP_IR1
GME Gain: $ -29.29 Win %: 50.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_TR
GME Gain: $ -132.37 Win %: 42.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AV
GME Gain: $ -26.55 Win %: 57.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_AL
GME Gain: $ -886.16 Win %: 37.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV_QP
GME Gain: $ 8.81 Win %: 54.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_TR
GME Gain: $ -233.2 Win %: 40.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AV
GME Gain: $ -101.29 Win %: 56.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_AL
GME Gain: $ -1023.03 Win %: 42.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM_QP
GME Gain: $ -31.2 Win %: 45.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QL
GME Gain: $ -935.36 Win %: 38.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_QP
GME Gain: $ 25.41 Win %: 77.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT_TS
GME Gain: $ -18476.8 Win %: 18.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO_AC
GME Gain: $ -209.75 Win %: 38.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP_PM
GME Gain: $ -3.42 Win %: 78.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AV_TS
GME Gain: $ 34.22 Win %: 81.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AL_TS
GME Gain: $ 132.86 Win %: 53.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_RV
GME Gain: $ 216.53 Win %: 57.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IR1
GME Gain: $ 19.7 Win %: 54.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TR
GME Gain: $ -132.37 Win %: 42.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AV
GME Gain: $ -86.63 Win %: 57.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AL
GME Gain: $ -78.78 Win %: 36.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_VI
GME Gain: $ 55.96 Win %: 54.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_LI
GME Gain: $ -819.91 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QP
GME Gain: $ 156.43 Win %: 57.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_HM
GME Gain: $ 153.73 Win %: 61.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_SS
GME Gain: $ 4.58 Win %: 39.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_QL
GME Gain: $ 121.53 Win %: 53.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_DB6
GME Gain: $ -51.31 Win %: 55.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AO
GME Gain: $ -18476.8 Win %: 18.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_AC
GME Gain: $ 64.55 Win %: 67.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_IT
GME Gain: $ -125.05 Win %: 45.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_PM
GME Gain: $ -12.73 Win %: 77.00 in 83 days with algo TB5_HL_QM_OB1_OS1_CB5_CS5_TS
GME Gain: $ -146.51 Win %: 57.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_TR_QP_DB6
GME Gain: $ -672.91 Win %: 48.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_TR_DB6
GME Gain: $ -226.58 Win %: 44.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_AV_DB6
GME Gain: $ -328.63 Win %: 45.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_AL_DB6
GME Gain: $ -178.16 Win %: 45.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_QP_DB6
GME Gain: $ -115.72 Win %: 56.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM_TR_DB6
GME Gain: $ 8.93 Win %: 44.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM_AV_DB6
GME Gain: $ -205.33 Win %: 50.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM_QP_DB6
GME Gain: $ 305.44 Win %: 60.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_IT_QL_DB6
GME Gain: $ -157.9 Win %: 56.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_IT_QP_DB6
GME Gain: $ -62.8 Win %: 56.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_TR_IR1
GME Gain: $ 28.27 Win %: 80.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_TR_TS
GME Gain: $ -154.62 Win %: 56.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_TR_QP
GME Gain: $ -258.72 Win %: 55.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_QP_IR1
GME Gain: $ -189.33 Win %: 48.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_TR
GME Gain: $ -214.33 Win %: 45.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_AV
GME Gain: $ -317.65 Win %: 46.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_AL
GME Gain: $ -225.82 Win %: 42.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV_QP
GME Gain: $ -87.89 Win %: 56.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM_TR
GME Gain: $ -10.71 Win %: 43.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM_AV
GME Gain: $ -56.29 Win %: 53.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM_AL
GME Gain: $ -216.19 Win %: 49.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM_QP
GME Gain: $ 301.52 Win %: 59.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_IT_QL
GME Gain: $ -201.91 Win %: 54.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_IT_QP
GME Gain: $ 62.67 Win %: 80.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_IT_TS
GME Gain: $ -275.21 Win %: 53.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_AO_AC
GME Gain: $ -7.6 Win %: 89.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_QP_PM
GME Gain: $ 25.09 Win %: 79.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_AV_TS
GME Gain: $ 31.83 Win %: 81.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_AL_TS
GME Gain: $ -194.57 Win %: 48.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_RV
GME Gain: $ -53.29 Win %: 55.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_IR1
GME Gain: $ -122.12 Win %: 55.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_TR
GME Gain: $ -41.32 Win %: 49.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_AV
GME Gain: $ -147.09 Win %: 55.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_AL
GME Gain: $ -216.14 Win %: 57.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_VI
GME Gain: $ -199.07 Win %: 53.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_LI
GME Gain: $ -157.72 Win %: 55.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_QP
GME Gain: $ -121.07 Win %: 54.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_HM
GME Gain: $ -84.93 Win %: 55.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_SS
GME Gain: $ 94.22 Win %: 53.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_QL
GME Gain: $ -137.04 Win %: 54.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_DB6
GME Gain: $ -342.07 Win %: 48.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_AO
GME Gain: $ -243.2 Win %: 49.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_AC
GME Gain: $ 242.48 Win %: 63.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_IT
GME Gain: $ -313.37 Win %: 65.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_PM
GME Gain: $ 25.11 Win %: 80.00 in 83 days with algo TB5_HL_HI_QM_OB5_OS5_CB5_CS5_TS
